Fix badge text intersection by widening badge column
- Increase badge column from col-sm-2 to col-sm-3 to prevent long badges like "NeurIPS MechInterp Spotlight" from overflowing
- Adjust content column from col-sm-8 to col-sm-7 to maintain Bootstrap grid layout
- Revert padding-right back to 1rem since column width fix resolves intersection issue

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -679,7 +679,7 @@ footer.sticky-bottom {
       .abbr {
         height: auto;
         margin-bottom: 0.5rem;
-        padding-right: 4rem;
+        padding-right: 1rem;
 
         abbr {
           display: inline-block;
